# exercise_detector

./: README.md
client_multicore/: CMakeLists.txt  main.c
data/: arnold_press.csv  biceps_curl.csv  shoulder_side.csv  standing_noise.csv  triceps_ext.csv
data_collector/: main.py
train/: train.ipynb
train_data/: train_data.ipynb
